# qobuz_tidal_api_client

./: CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
clients/go/: auth.go  auth_test.go  catalog.go  catalog_test.go  client_test.go  discovery.go  discovery_test.go  errors.go  errors_test.go  favorites.go  favorites_test.go  go.mod  http.go  playlists.go  playlists_test.go  qobuz.go  streaming.go  streaming_test.go  testhelper_test.go  types.go  types_test.go
clients/go/tidal/: go.mod  (+18 more)
clients/python/: pyproject.toml
clients/python/qobuz/: __init__.py  _http.py  auth.py  catalog.py  cli.py  client.py  discovery.py  downloader.py  errors.py  favorites.py  playlists.py  spoofer.py  streaming.py  types.py
clients/python/tests/: conftest.py  test_auth.py  test_catalog.py  test_client.py  test_discovery.py  test_download_dedup.py  test_download_retry.py  test_downloader.py  test_errors.py  test_favorites.py  test_http.py  test_playlists.py  test_streaming.py  test_tagging_parity.py  test_types.py
clients/python/tidal/: pyproject.toml
clients/python/tidal/tests/: conftest.py  test_catalog.py  test_download_retry.py  test_downloader_hardening.py  test_downloader_helpers.py  test_errors.py  test_favorites.py  test_http.py  test_streaming.py  test_types.py
clients/python/tidal/tidal/: __init__.py  _http.py  auth.py  catalog.py  client.py  downloader.py  errors.py  favorites.py  streaming.py  types.py
docs/: api-spec.md
(+2 files in other folders)
