[project]
name = "qobuz"
version = "0.1.0"
description = "Async Python client for the Qobuz API"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "aiolimiter>=1.1",
    "mutagen>=1.45",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
]

[project.scripts]
qobuz = "qobuz.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
