[project]
name = "tidal"
version = "0.1.0"
description = "Async Python client for the Tidal API (v1, with downloads)"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "aiolimiter>=1.1",
    "aiofiles>=0.7",
    "pycryptodomex>=3.10",
    "mutagen>=1.45",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
